[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin = { version = "2.0.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "mdns", "ping", "macros", "tokio", "websocket"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"